# wc

./: .gitignore  2D_LIDAR_SLAM_COMPLETE_GUIDE.tex  CLAUDE.md  COMPLETE_PARAMETER_ANALYSIS.md  COMPLETE_SYSTEM_SUMMARY.md  CROWD_NAVIGATION_ROADMAP.md  DEEP_WORKSPACE_ANALYSIS.md  DELIVERY_SUMMARY.md  DEPLOYMENT_GUIDE.md  DOCKER_CHEATSHEET.md  DOCKER_LEARNING.md  ENVIRONMENT_SETUP_GUIDE.md  GETTING_STARTED.md  HECTOR_SLAM_ANALYSIS.md  ICML_SENSOR_FUSION_ODOMETRY_PLAN.md  IMPLEMENTATION_GUIDE.md  LAUNCH_FILE_GUIDE.md  PACKAGES_SUMMARY.md  PRODUCTION_READINESS_REPORT.md  QUICK_START.md  QUICK_START_ICML.md  README.md  RESEARCH_PLAN.md  ROBUSTNESS_ENHANCEMENTS.md  SENSOR_FUSION_OVERVIEW.md  SLAM_CONFIG_REVIEW.txt  SLAM_DOCUMENTATION_INDEX.md  SLAM_GEOMETRIC_FIX_v15.md  VIO_SYSTEM_SUMMARY.md  WHEELCHAIR_NAV_PLAN.md  check_time_sync.py  compare_configs.sh  full_reorganize.py  map_filter.py  reorg_v2.py  reorganize_complete.py  reorganize_latex.py  requirements.txt  slam_diagnostics.sh  test_arduino_direct.py  (+1 more)
.github/workflows/: ci.yml
docs/: BUMPERBOT_LEARNINGS.md  ICRA2025_SensorFusion.tex  ICRA2025_references.bib  IMPLEMENTATION_GUIDE.md  PAPER_SUBMISSION_SUMMARY.md  RESEARCH_SURVEY.md  SAFE_SENSOR_FUSION.md  SUPERIORITY_ANALYSIS.md  WHEELCHAIR_EKF_PIPELINE.md  journal_paper.tex  references.bib  slam_learning.md  template.tex
docs/archive_md_files/: HECTOR_SLAM_DEEP_DIVE_ANALYSIS.md  PARAMETER_VALIDATION_CORRECTION.md  RPLIDAR_S3_RANGE_SPECIFICATIONS.md  SLAM_CONFIG_VERSIONS_COMPLETE_ANALYSIS.md  SLAM_DEEP_DIVE_ANALYSIS.md  SLAM_V14_PRO_TECHNICAL_REPORT.md
evaluation/: analyze_failures.py  run_experiments.py  visualize_results.py
evaluation/data/: test_instructions.txt
maps/: my_map.yaml  my_map_best.pgm  my_map_best.yaml  my_map_edges.pgm  my_map_edges.yaml  my_map_gaussian.pgm  my_map_gaussian.yaml  my_map_isolated.pgm  my_map_isolated.yaml  my_map_median.pgm  my_map_median.yaml  my_map_morpho.pgm  my_map_morpho.yaml
paper/: main.tex  references.bib
paper/sections/: conclusion.tex  experiments.tex  intro.tex  method.tex  problem.tex  related.tex
scripts/: setup_all.sh
src/: comparison.md
src/capnav_real/: CMakeLists.txt  package.xml
src/capnav_real/capnav_real/: __init__.py
src/capnav_real/nodes/: attribute_extractor.py  capnav_navigator.py  dinov2_clip_extractor.py  goal_verifier.py  instance_clusterer.py  language_parser.py  map_builder.py  yolo_sam_detector.py
src/ran_complete/: CMakeLists.txt  README.md  package.xml
src/ran_complete/config/: ran_params.yaml
src/ran_complete/launch/: full_system.launch.py
src/ran_complete/nodes/: ran_hierarchical_verifier.py  ran_mapping_node.py  ran_navigator.py  ran_perception_node.py  ran_safety_monitor.py
src/ran_complete/ran_complete/: __init__.py
src/ran_complete/scripts/: download_models.sh  test_system.py  validate_setup.py
src/ran_perception/: CMakeLists.txt  package.xml
src/ran_perception/nodes/: confidence_estimator.py  feature_extractor.py  sam_segmenter.py  yolo_detector.py
src/ran_perception/ran_perception/: __init__.py
src/robot_localization-jazzy-devel/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/robot_localization-jazzy-devel/src/: navsat_transform.cpp  ros_filter.cpp
src/scripts/: package.xml  setup.py
src/scripts/launch/: data_collection.launch.py  ekf_optimized.launch.py  ekf_simple_optimized.launch.py  (+3 more)
src/vlmaps_ros2/: CMakeLists.txt  package.xml
src/vlmaps_ros2/nodes/: goal_generator.py  language_query.py  vlmap_builder.py
src/vlmaps_ros2/vlmaps_ros2/: __init__.py
src/wc_control/: CMakeLists.txt
src/wheelchair_adaptive_navigation/: README.md  package.xml  setup.cfg  setup.py
src/wheelchair_bringup/: CMakeLists.txt  package.xml
src/wheelchair_crowd_navigation/: README.md  package.xml  setup.cfg  setup.py
src/wheelchair_crowd_navigation/config/: planner_config.yaml  vqvae_config.yaml
src/wheelchair_crowd_navigation/launch/: crowd_navigation.launch.py
src/wheelchair_crowd_navigation/wheelchair_crowd_navigation/: __init__.py
src/wheelchair_crowd_navigation/wheelchair_crowd_navigation/models/: __init__.py  decoder.py  encoder.py  pixelcnn.py  vqvae.py
src/wheelchair_crowd_navigation/wheelchair_crowd_navigation/perception/: __init__.py
src/wheelchair_crowd_navigation/wheelchair_crowd_navigation/planning/: __init__.py  collision_checker.py  sampling_optimizer.py  trajectory_scorer.py
src/wheelchair_crowd_navigation/wheelchair_crowd_navigation/ros2/: __init__.py  crowd_planner_node.py  visualization_node.py
src/wheelchair_crowd_navigation/wheelchair_crowd_navigation/training/: __init__.py
src/wheelchair_firmware/: README.md
src/wheelchair_localization/: README_LOCALIZATION.md  README_VIO.md  setup.py
src/wheelchair_mapping/: setup.py
src/wheelchair_motion/: CMakeLists.txt  motion_planner_plugins.xml  package.xml
src/wheelchair_navigation/: README.md
src/wheelchair_planning/: CMakeLists.txt  global_planner_plugins.xml  package.xml
src/wheelchair_sensor_fusion/: ENVIRONMENT_SETUP.md  HARDWARE_OPTIMIZATION.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  WHEELCHAIR_INTEGRATION.md  package.xml  setup.cfg  setup.py
src/wheelchair_sensor_fusion/config/: lidar_processor.yaml  obstacle_publisher.yaml  pointcloud_filter.yaml  sensor_fusion.yaml  wheelchair_integration.yaml
src/wheelchair_sensor_fusion/launch/: complete_system.launch.py  sensor_fusion.launch.py  wheelchair_fusion.launch.py
src/wheelchair_sensor_fusion/rviz/: sensor_fusion.rviz
src/wheelchair_sensor_fusion/scripts/: benchmark_system.sh  calibrate_sensors.sh  evaluate_performance.py  install_dependencies.sh  install_system.sh  monitor_performance.py  setup_permissions.sh  test_sensors.sh  validate_system.sh
src/wheelchair_sensor_fusion/test/: test_copyright.py  test_flake8.py  test_integration.py  test_pep257.py
src/wheelchair_sensor_fusion/wheelchair_sensor_fusion/: __init__.py  adaptive_fusion_node.py  lidar_processor_node.py  obstacle_publisher_node.py  safety_monitor_node.py  sensor_fusion_node.py  sensor_fusion_node_robust.py  yolo_detector_node.py
(+189 files in other folders)
