<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wheelchair_crowd_navigation</name>
  <version>0.1.0</version>
  <description>
    CrowdSurfer-based dense crowd navigation for wheelchairs using VQVAE and sampling optimization.
    Recreates the ICRA 2025 CrowdSurfer approach in ROS2 Jazzy.
  </description>

  <maintainer email="s24035@students.iitmandi.ac.in">Siddharth Tiwari</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/siddharthtiwari1/wc</url>
  <url type="repository">https://github.com/Smart-Wheelchair-RRC/CrowdSurfer</url>

  <author email="s24035@students.iitmandi.ac.in">Siddharth Tiwari</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_core</depend>

  <!-- Python ML dependencies (installed via pip) -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
