<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wheelchair_sensor_fusion</name>
  <version>1.0.0</version>
  <description>
    Advanced 2D LiDAR and Camera Sensor Fusion Package for Wheelchair Obstacle Avoidance
    Integrates RPLidar S3 and RealSense D455 with YOLOv11 for robust obstacle detection
  </description>

  <maintainer email="s24035@students.iitmandi.ac.in">Siddharth Tiwari</maintainer>
  <license>MIT</license>

  <author email="s24035@students.iitmandi.ac.in">Siddharth Tiwari</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core ROS2 Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- TF and Transforms -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Image Processing -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- Vision Messages (CRITICAL - used by YOLO detector and fusion) -->
  <depend>vision_msgs</depend>

  <!-- Message Synchronization -->
  <depend>message_filters</depend>

  <!-- Sensor Drivers -->
  <depend>realsense2_camera</depend>
  <depend>rplidar_ros</depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
